# FenixAI_tradingBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  MANIFEST.in  PAPER_TRADING_TEST_GUIDE.md  README.md  RELEASE_CHECKLIST.md  alembic.ini  crypto_sentiment_free_alternatives.md  docker-compose.monitoring.yml  docker-compose.yml  error.md  package-lock.json  pyproject.toml  research_crypto_sentiment_analysis.md  run_fenix.py  run_hybrid_live_paper.py  run_minifenix.py  run_minifenix_model_sweep.py  run_nanofenixv3.py
alembic/: env.py
api/: app.ts  tsconfig.json
config/: fenix.yaml  llm_providers.yaml  llm_providers_1min_optimized.yaml  ollama_cloud_advanced.yaml  ollama_cloud_glm51_gemma4.yaml  ollama_cloud_production.yaml  prometheus.yml  tradingview_credentials.json
docs/: CHANGELOG.md  CHART_CAPTURE_SYSTEM.md  ESTADO_FINAL.txt  IMPLEMENTATION.md  NANOFENIX_HTF_V2_5_CHANGES.md  QUICKSTART.md
fenix_experimental/: __init__.py  fast_trigger.py  models.py  runner.py  slow_brain.py
frontend/: App.tsx  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
logs/: signal_trace.jsonl  system_integration_structured.jsonl
minifenix/: README.md  __init__.py  brain.py  feature_engine.py  models.py  multi_paper_trader.py  multi_symbol_trader_v2.py  paper_trader.py  pretrain_offline.py  simple_trigger.py  sota_model_pretrained.joblib  sota_predictor.py  testnet_trader.py  trigger.py
nanofenixv3/: CHANGELOG.md  HISTORY.md  __init__.py  adaptive_fusion.py  core.py  executor.py  feature_engine.py  predictor.py  pretrained_btcusdc.pkl  pretrained_btcusdt.pkl  pretrained_btcusdt_5s.pkl  pretrained_ethusdt.pkl  pretrained_solusdt.pkl
scripts/: README.md  benchmark_vllm_ollama.py  crypto_sentiment_system.py  demo_chart_system.py  fenix_v3_agent_organization.py  futures_service_example.py  launch_fenix_v25_live_mtf_safe.sh  manage_migrations.py  minifenix_optimized_for_comparison.py  monitor_live_canary.py  nanofenix_pretrain.py  release_cleanup.sh  run_benchmark_suite.py  run_chart_service.py  run_fenix_experimental.py  run_fenix_live_slot.py  run_fenix_live_suite.py  run_fenix_v3_test.py  run_hybrid_live_paper.py  run_nanofenix_companion_signal.sh  test_chart_scheduler.py  test_indicators.py  verify_migrations.py  verify_precision.py
src/: __init__.py
tests/: conftest.py  test.py  test_agent_timeouts.py  test_api_server.py  test_auto_evaluator.py  test_binance_integration.py  test_binance_service_orders.py  test_circuit_breaker_edge_cases.py  test_circuit_breaker_real.py  test_core_module.py  test_data_normalizer.py  test_database_config.py  test_decision_agent_fallback.py  test_decision_judge_default.py  test_e2e.py  test_engine_balance_state.py  test_engine_decision.py  test_engine_filters.py  test_engine_position_management.py  test_engine_risk_gate.py  test_engine_size_multiplier.py  test_exchange_client.py  test_executor_clamp.py  test_fenix_experimental.py  test_hybrid_runner.py  test_improvements_v21.py  test_inference_multi_provider.py  test_integration.py  test_integration_circuit_breaker.py  test_langgraph_orchestrator.py  test_lite_pipeline_parallelism.py  test_live_slot_regressions.py  (+38 more)
(+233 files in other folders)
